<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudySkillsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="289dp"
        android:layout_height="213dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579"
        tools:ignore="TextSizeCheck">

        <Button
            android:id="@+id/advising_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advisors_header" />

        <Button
            android:id="@+id/workshop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workshop_text" />

        <Button
            android:id="@+id/leetcode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leetcode_text" />

        <Button
            android:id="@+id/tlc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tlc_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:text="@string/study_skills_header"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>