<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.RegisterFragment">

    <LinearLayout
        android:id="@+id/register_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/css_compass_logo" />

        <EditText
            android:id="@+id/email_register_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/husky_purple"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/pwd_register_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/husky_purple"
            android:hint="@string/pwd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/student_num_register_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/husky_purple"
            android:hint="@string/student_num"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fname_register_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/husky_purple" />

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/lname_register_box"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/husky_purple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enroll_year_register_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/enroll_year"
                android:inputType="text"
                android:textColor="@color/husky_purple" />

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/grad_year_register_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/grad_year"
                android:inputType="text"
                android:textColor="@color/husky_purple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/husky_purple"
                android:text="@string/register_text"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textError"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/design_default_color_error" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>