<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/husky_purple"
            android:fontFamily="@font/hammersmith_one"
            android:gravity="center"
            android:text="@string/user_profile"
            android:textColor="@color/husky_gold"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="195dp"
                android:layout_height="183dp"
                android:layout_weight="1"
                android:src="@mipmap/css_compass_logo" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/profile_email_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hammersmith_one"
                    android:text="@string/email"
                    android:textColor="@color/husky_purple"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hammersmith_one"
                    android:text="@string/placeholder" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/profile_fname_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hammersmith_one"
                    android:text="@string/first_name"
                    android:textColor="@color/husky_purple"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hammersmith_one"
                    android:text="@string/placeholder" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/profile_lname_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hammersmith_one"
                    android:text="@string/last_name"
                    android:textColor="@color/husky_purple"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hammersmith_one"
                    android:text="@string/placeholder" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/profile_details_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hammersmith_one"
                android:paddingLeft="-16dp"
                android:text="@string/student_details"
                android:textAlignment="center"
                android:textColor="@color/husky_purple"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/profile_student_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/student_num"
                android:textColor="@color/husky_purple"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_student_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/placeholder" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/profile_enroll_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/enroll_year"
                android:textColor="@color/husky_purple"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_enroll_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/placeholder" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/profile_grad_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/grad_year"
                android:textColor="@color/husky_purple"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_grad_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/placeholder" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/my_events_button"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom|center"
            android:background="@color/husky_purple"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/myevents"
            android:textAlignment="center"
            android:textColor="@color/husky_gold" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom|center"
            android:background="@color/husky_purple"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/husky_gold" />

    </LinearLayout>
</FrameLayout>